--- a/composables/src/main/res/values/strings.xml
+++ b/composables/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="login_tf_user_label">Ingrese usuario…</string>
     <string name="login_tt_user_label">Usuario</string>
     <string name="login_bt_back_up">Back up</string>
+    <string name="general_bt_accept">Aceptar</string>
 </resources>
